[package]
name = "ticket_to_ics"
version = "0.1.0"
edition = "2024"

[dependencies]
ollama-rs = {version = "=0.2.2", features = ["chat-history"]}
async-std = {version = "1.13.0", features = ["attributes", "tokio1"]}
langchain-rust = {version = "=4.6.0", features = ["ollama"]}
serde_json = "1.0.140"
futures-util = "0.3.31"
pdf2image = "0.1.3"
base64 = "0.22.1"
ics = "0.5.8"
chrono = "0.4.40"
